# winners-preprocessor

./: .cursorrules  .env.example  .gitignore  =1.13.0  =2.6.0  CLI_ERRORS_FIXED.md  CLI_LAUNCH_GUIDE.md  Debugging Docprep Pipeline.md  FINAL_TESTING_REPORT.md  FIXES_SUMMARY.md  MIGRATION_PLAN.md  PIPELINE_TEST_FINAL_REPORT.md  PREPROCESSING_CLEANUP_FINAL_REPORT.md  PREPROCESSING_COMPONENTS_ANALYSIS.md  Pipeline Debugging and Refinement.md  README.md  REAL_test_10_pdfs.py  RECEIVER_FINAL_STATUS_REPORT.md  RECEIVER_REFACTORING_REPORT.md  RECEIVER_TESTING_REPORT.md  RECEIVER_WEBUI_REFACTORING_REPORT.md  REFACTORING_COMPLETE.md  REFACTORING_COMPLETE_PHASE2.md  SSH_SETUP_INSTRUCTIONS.md  SYNC_DB_CLI_TESTING_GUIDE.md  TEST_RESULTS.md  Untitled  VPN_MONGO_SETUP_SUMMARY.md  VPN_SETUP_COMPLETE.md  WEBUI_RESTART_INSTRUCTIONS.md  WEBUI_TEST_REPORT.md  XVFB_OPTIMIZATION_SUMMARY.md  add_ssh_keys_to_beget.sh  classify_docs_files.py  combined_token_test.py  component_integration_tester.py  cursor_docker_paddleocsr_vl.md  enhanced_pdf_smoldocling_processor.py  final_mongo_test.py  fix_paths.py  (+45 more)
final_preprocessing/: .cursorrules  CLASSIFICATION_REPORT.md  CLASSIFICATION_REPORT_2025-12-20.md  CLASSIFIER_TESTING_REPORT.md  CLEANUP_REPORT.md  COMPLETE_ANALYTICS_REPORT.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_PIPELINE_REPORT_2025-03-19.md  COMPREHENSIVE_CLASSIFICATION_REPORT_2025-12-20.md  CYCLE1_CYCLE2_FULL_TEST_REPORT.md  CYCLE1_TEST_REPORT.md  DOC_CONVERSION_FIXES.md  Dockerfile.libreoffice  Docling Refactoring and Debugging.md  EXCEPTIONS_MIGRATION.md  FINAL_CLASSIFICATION_REPORT.md  (+73 more)
(+62123 files in other folders)
